tests/snapshots/sdk_serialization_snapshots__agent_events__event_command_executed.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: event
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "command_executed",
  "command": "cargo test",
  "exit_code": 0,
  "output_preview": "test result: ok. 42 passed"
}
