tests/snapshots/sdk_serialization_snapshots__agent_events__event_error_without_code.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: event
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "error",
  "message": "Backend timed out"
}
