tests/snapshots/sdk_serialization_snapshots__agent_events__event_file_changed.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: event
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "file_changed",
  "path": "src/lib.rs",
  "summary": "Added new function"
}
