tests/snapshots/sdk_serialization_snapshots__agent_events__event_run_started.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: event
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "run_started",
  "message": "Starting execution"
}
