tests/snapshots/sdk_serialization_snapshots__agent_events__event_tool_call_nested.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: event
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "tool_call",
  "tool_name": "grep",
  "tool_use_id": "tu_002",
  "parent_tool_use_id": "tu_001",
  "input": {
    "pattern": "fn main"
  }
}
